// ReSharper disable InconsistentNaming
// ReSharper disable UnusedMember.Global
namespace pg3302_Eksamen
{
    public enum Cards
    {
        Heart_Ace = 1,
        Heart_Two,
        Heart_Three,
        Heart_Four,
        Heart_Five,
        Heart_Six,
        Heart_Seven,
        Heart_Eight,
        Heart_Nine,
        Heart_Ten,
        Heart_Jack,
        Heart_Queen,
        Heart_King,

        Spade_Ace,
        Spade_Two,
        Spade_Three,
        Spade_Four,
        Spade_Five,
        Spade_Six,
        Spade_Seven,
        Spade_Eight,
        Spade_Nine,
        Spade_Ten,
        Spade_Jack,
        Spade_Queen,
        Spade_King,

        Diamond_Ace,
        Diamond_Two,
        Diamond_Three,
        Diamond_Four,
        Diamond_Five,
        Diamond_Six,
        Diamond_Seven,
        Diamond_Eight,
        Diamond_Nine,
        Diamond_Ten,
        Diamond_Jack,
        Diamond_Queen,
        Diamond_King,

        Club_Ace,
        Club_Two,
        Club_Three,
        Club_Four,
        Club_Five,
        Club_Six,
        Club_Seven,
        Club_Eight,
        Club_Nine,
        Club_Ten,
        Club_Jack,
        Club_Queen,
        Club_King
    }
}